--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   
@@ -10,9 +11,9 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <meta name="description" content="Kenzie" />
+    <meta name="description" content="K" />
     <meta name="author" content="Kenzie" />
-    <meta name="keywords" content="Kenzie" />
+    <meta name="keywords" content="K" />
     <title>Trivia Game</title>
     <!-- Title Page-->
    
